--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@
 }
 
 .site-wrapper .picture-2 {
-  background: url(/images/Gandikota3.jpg) no-repeat center center fixed;
+  background: url(/images/Gandikota.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
