--- a/css/style.scss
+++ b/css/style.scss
@@ -140,7 +140,7 @@
     }
 
     .picture-2 {
-        background: url(/images/Gandikota3.jpg) no-repeat center center fixed;
+        background: url(/images/Gandikota.jpg) no-repeat center center fixed;
         background-size: cover;
         .picture-heading {
             color: #fff; 
