--- a/css/style.scss
+++ b/css/style.scss
@@ -1055,172 +1055,172 @@ body {
 
 
     .picture-1 {
-        background: url(images/Compressed/Yercard.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Yercard.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-1 {
-            background: url(images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
+            background: url(../images/Compressed/Yercard.jpg) no-repeat 85% center fixed;
             background-size: cover;
         }
     }
 
     .picture-2 {
-        background: url(images/Compressed/Gandikota.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Gandikota.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-3 {
-        background: url(images/Compressed/Kovalam.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Kovalam.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-4 {
-        background: url(images/Compressed/Agumbe.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Agumbe.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-4 {
-            background: url(images/Compressed/Agumbe.jpg) no-repeat 37% center fixed;
+            background: url(../images/Compressed/Agumbe.jpg) no-repeat 37% center fixed;
             background-size: cover;
         }
     }
 
     .picture-5 {
-        background: url(images/Compressed/Badami.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Badami.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-5 {
-            background: url(images/Compressed/Badami.jpg) no-repeat 40% center fixed;
+            background: url(../images/Compressed/Badami.jpg) no-repeat 40% center fixed;
             background-size: cover;
         }
     }
 
     .picture-6 {
-        background: url(images/Compressed/EttinaBuja.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/EttinaBuja.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-6 {
-            background: url(images/Compressed/EttinaBuja.jpg) no-repeat 45% center fixed;
+            background: url(../images/Compressed/EttinaBuja.jpg) no-repeat 45% center fixed;
             background-size: cover;
         }
     }
 
     .picture-7 {
-        background: url(images/Compressed/Goa.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Goa.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-8 {
-        background: url(images/Compressed/Belur.jpg) no-repeat bottom center fixed;
+        background: url(../images/Compressed/Belur.jpg) no-repeat bottom center fixed;
         background-size: cover;
     }
 
     .picture-9 {
-        background: url(images/Compressed/Kodachadri.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Kodachadri.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-9 {
-            background: url(images/Compressed/Kodachadri.jpg) no-repeat 31% center fixed;
+            background: url(../images/Compressed/Kodachadri.jpg) no-repeat 31% center fixed;
             background-size: cover;
         }
     }
 
     .picture-10 {
-        background: url(images/Compressed/Pattadkal.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Pattadkal.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-10 {
-            background: url(images/Compressed/Pattadkal.jpg) no-repeat 38% center fixed;
+            background: url(../images/Compressed/Pattadkal.jpg) no-repeat 38% center fixed;
             background-size: cover;
         }
     }
 
     .picture-11 {
-        background: url(images/Compressed/Pondicherry.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Pondicherry.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-12 {
-        background: url(images/Compressed/Ramanagar.JPG) no-repeat top center fixed;
+        background: url(../images/Compressed/Ramanagar.JPG) no-repeat top center fixed;
         background-size: cover;
     }
 
     .picture-13 {
-        background: url(images/Compressed/Aihole.jpg) no-repeat top center fixed;
+        background: url(../images/Compressed/Aihole.jpg) no-repeat top center fixed;
         background-size: cover;
     }
 
     .picture-14 {
-        background: url(images/Compressed/Banasura.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Banasura.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-15 {
-        background: url(images/Compressed/Hampi.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Hampi.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-16 {
-        background: url(images/Compressed/HidlumaneFalls.jpg) no-repeat center 79% fixed;
+        background: url(../images/Compressed/HidlumaneFalls.jpg) no-repeat center 79% fixed;
         background-size: cover;
     }
 
     .picture-17 {
-        background: url(images/Compressed/Ooty.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Ooty.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-18 {
-        background: url(images/Compressed/Mysore.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Mysore.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-19 {
-        background: url(images/Compressed/Melkote2.jpg) no-repeat center center fixed;
+        background: url(../images/Compressed/Melkote2.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 
     .picture-20 {
-        background: url(images/Compressed/Anjanadri.jpg) no-repeat center 30% fixed;
+        background: url(../images/Compressed/Anjanadri.jpg) no-repeat center 30% fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-20 {
-            background: url(images/Compressed/Anjanadri.jpg) no-repeat 33% 30% fixed;
+            background: url(../images/Compressed/Anjanadri.jpg) no-repeat 33% 30% fixed;
             background-size: cover;
         }
     }
 
     .picture-21 {
-        background: url(images/Compressed/Devaramane.jpg) no-repeat center 65% fixed;
+        background: url(../images/Compressed/Devaramane.jpg) no-repeat center 65% fixed;
         background-size: cover;
     }
 
     .picture-22 {
-        background: url(images/Compressed/Shravanabelagola.jpg) no-repeat center 18% fixed;
+        background: url(../images/Compressed/Shravanabelagola.jpg) no-repeat center 18% fixed;
         background-size: cover;
     }
 
     .picture-23 {
-        background: url(images/Compressed/Waynad.jpg) no-repeat center 44% fixed;
+        background: url(../images/Compressed/Waynad.jpg) no-repeat center 44% fixed;
         background-size: cover;
     }
 
     @media (max-width:700px) {
         .picture-23 {
-            background: url(images/Compressed/Waynad.jpg) no-repeat 27% 44% fixed;
+            background: url(../images/Compressed/Waynad.jpg) no-repeat 27% 44% fixed;
             background-size: cover;
         }
     }
