JS links correction

--- a/css/style.css
+++ b/css/style.css
@@ -1144,7 +1144,7 @@ body {
 }
 
 .site-wrapper .picture-12 {
-  background: url(../images/Compressed/Ramanagar.JPG) no-repeat top center fixed;
+  background: url(../images/Compressed/Ramanagar.jpg) no-repeat top center fixed;
   background-size: cover;
 }
 
