--- a/css/style.scss
+++ b/css/style.scss
@@ -1152,7 +1152,7 @@ body {
     }
 
     .picture-12 {
-        background: url(../images/Compressed/Ramanagar.JPG) no-repeat top center fixed;
+        background: url(../images/Compressed/Ramanagar.jpg) no-repeat top center fixed;
         background-size: cover;
     }
 
